# sauver

./: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  LICENSE  MANIFESTO.md  Makefile  README.md  gemini-extension.json  mcp.json  pyproject.toml
.agent/workflows/: bouncer-reply.md  slop-detector.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: archiver.md  bouncer-reply.md  investor-trap.md  sauver.md  slop-detector.md  tracker-shield.md
.cursor-plugin/: marketplace.json  plugin.json
.gemini/: settings.json
.gemini/policies/: allow-read.toml
.gemini/skills/: archiver.md  bouncer-reply.md  investor-trap.md  sauver.md  slop-detector.md  tracker-shield.md
.gemini/skills/archiver/: SKILL.md
.gemini/skills/bouncer-reply/: SKILL.md
.gemini/skills/investor-trap/: SKILL.md
.gemini/skills/sauver/: SKILL.md
.gemini/skills/slop-detector/: SKILL.md
.gemini/skills/tracker-shield/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: test.yml
apps-script/: Code.gs
assets/: BRAND_GUIDELINES.md
docs/: ARCHITECTURE.md  linkedin-plan.md
mcp-server/: index.js  package-lock.json  package.json
scripts/: install.sh  setup.sh  sync_commands.py  uninstall.sh
skills/: PROTOCOL.md
skills/archiver/: SKILL.md
skills/assets/: NDA.docx
skills/bouncer-reply/: SKILL.md
skills/investor-trap/: SKILL.md
skills/sauver/: SKILL.md
skills/sauver-inbox-assistant/: SKILL.md
skills/sauver-report/: SKILL.md
skills/slop-detector/: SKILL.md
skills/tracker-shield/: SKILL.md
src/: main.py
tests/: run-skill-tests.sh  test-install.sh  test_main.py  test_skill_routing.py
tests/fixtures/legitimate/: android-studio-newsletter.eml  android-studio-newsletter.test.json  gcp-billing-closed.eml  gcp-billing-closed.test.json  google-security-alert.eml  google-security-alert.test.json  google-workspace-canceled.eml  google-workspace-canceled.test.json  openclaw-meetup-reminder.eml  (+3 more)
tests/mock-mcp-server/: index.js  package-lock.json  package.json
(+56 files in other folders)
